# configparserplus

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
configparserplus/: __init__.py  compat.py  main.py
tests/: test_main.py
tests/fixtures/case1/: common.ini
tests/fixtures/case2/: child.ini  father.ini  grandfather.ini
tests/fixtures/case3/: child.ini
tests/fixtures/case3/father/: base.ini
